force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/cm_Loan__c.field-meta.xml
<CustomField>
    <fullName>cm_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to LLC_BI__Loan__c object. Populated by a process builder.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Pricing Rate Components</relationshipLabel>
    <relationshipName>Pricing_Rate_Components</relationshipName>
    <type>Lookup</type>
</CustomField>