force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/LLC_BI__Index__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Index__c</fullName>
    <description>This field is required. It is manually populated. It indicates the Index applied to a Pricing Rate Component record.</description>
    <label>Index</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COF_mo_1</fullName>
            </value>
            <value>
                <fullName>COF_mo_2</fullName>
            </value>
            <value>
                <fullName>COF_mo_3</fullName>
            </value>
            <value>
                <fullName>COF_mo_4</fullName>
            </value>
            <value>
                <fullName>COF_mo_5</fullName>
            </value>
            <value>
                <fullName>COF_mo_6</fullName>
            </value>
            <value>
                <fullName>COF_Overnight</fullName>
            </value>
            <value>
                <fullName>Fed_Funds_Current</fullName>
            </value>
            <value>
                <fullName>Fed_Funds_Prior_Day</fullName>
            </value>
            <value>
                <fullName>LIBOR_mo_1</fullName>
            </value>
            <value>
                <fullName>LIBOR_mo_12</fullName>
            </value>
            <value>
                <fullName>LIBOR_mo_2</fullName>
            </value>
            <value>
                <fullName>LIBOR_mo_3</fullName>
            </value>
            <value>
                <fullName>LIBOR_mo_6</fullName>
            </value>
            <value>
                <fullName>LIBOR_Overnight</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Prime_FRED</fullName>
            </value>
            <value>
                <fullName>Swap_yr_1</fullName>
            </value>
            <value>
                <fullName>Swap_yr_10</fullName>
            </value>
            <value>
                <fullName>Swap_yr_2</fullName>
            </value>
            <value>
                <fullName>Swap_yr_3</fullName>
            </value>
            <value>
                <fullName>Swap_yr_30</fullName>
            </value>
            <value>
                <fullName>Swap_yr_4</fullName>
            </value>
            <value>
                <fullName>Swap_yr_5</fullName>
            </value>
            <value>
                <fullName>Swap_yr_7</fullName>
            </value>
            <value>
                <fullName>TCMI_yr_1</fullName>
            </value>
            <value>
                <fullName>TCMI_yr_10</fullName>
            </value>
            <value>
                <fullName>TCMI_yr_2</fullName>
            </value>
            <value>
                <fullName>TCMI_yr_20</fullName>
            </value>
            <value>
                <fullName>TCMI_yr_3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>