force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/LLC_BI__Index_Spread_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Index_Spread_Type__c</fullName>
    <description>The system automatically populates this field based on either a negative or positive Spread value.</description>
    <inlineHelpText>The system auto-populates this field with Add Spread to Index when the Spread value is positive, and Subtract Spread from Index when the Spread value is negative.</inlineHelpText>
    <label>Index Spread Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add Spread to Index</fullName>
            </value>
            <value>
                <fullName>Subtract Spread from Index</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>