force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/LLC_BI__Initial_Adjustment_Rate_Cap__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Adjustment_Rate_Cap__c</fullName>
    <description>The system automatically populates this optional percentage field to specify how much the interest rate may increase or decrease during the initial adjustment period of the loan.</description>
    <inlineHelpText>The system-populated field displays how much the interest rate may increase or decrease during the initial adjustment period of the loan.</inlineHelpText>
    <label>Initial Adjustment Rate Cap</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>