force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/LLC_BI__Interest_Rate_Adjustment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Rate_Adjustment_Frequency__c</fullName>
    <description>The system automatically populates this optional field. It is used to specify how often an interest rate will be updated.</description>
    <inlineHelpText>The system automatically populates this field. It is used to specify how often an interest rate will be updated.</inlineHelpText>
    <label>Interest Rate Adjustment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Every Other Week</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannually</fullName>
            </value>
            <value>
                <fullName>Semimonthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>