force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/LLC_BI__Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Rate_Type__c</fullName>
    <description>Users populate this optional picklist field to apply the selected interest rate type to a rate stream. By default, it is fixed.</description>
    <inlineHelpText>Select an interest rate type to apply to the rate stream.</inlineHelpText>
    <label>Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Fixed with Index</fullName>
            </value>
            <value>
                <fullName>Floating with Index</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>