force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/LLC_BI__Lifetime_Rate_Cap__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lifetime_Rate_Cap__c</fullName>
    <description>The system automatically populates this optional percentage field to specify how much the interest rate may increase or decrease over the term of the loan.</description>
    <inlineHelpText>The system-populated field displays how much the interest rate may increase or decrease over the term of the loan.</inlineHelpText>
    <label>Lifetime Rate Cap</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>