force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/LLC_BI__Pricing_Stream__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pricing_Stream__c</fullName>
    <description>This field is required. It is automatically populated. It identifies the Pricing Stream record associated with the Pricing Rate Component record.</description>
    <label>Pricing Stream</label>
    <referenceTo>LLC_BI__Pricing_Stream__c</referenceTo>
    <relationshipLabel>Pricing Rate Components</relationshipLabel>
    <relationshipName>Pricing_Rate_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>