force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/LLC_BI__Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate__c</fullName>
    <description>This field is required. It is manually populated. It indicates the interest rate applied to a Pricing Rate Component record.</description>
    <label>Rate</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>