force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/LLC_BI__Rate_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Adjustment__c</fullName>
    <description>Users populate this required field with the value to which they want to adjust the rate by. By default, it is blank.</description>
    <inlineHelpText>Enter a number within the threshold to adjust the rate.</inlineHelpText>
    <label>Rate Adjustment</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>