force-app/main/default/objects/LLC_BI__Pricing_Rate_Component__c/fields/LLC_BI__Spread__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread__c</fullName>
    <description>This field is optional. It is manually populated. It indicates the interest spread applied to a variable rate index for a Pricing Rate Component record.</description>
    <label>Spread</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>